--- a/frontend-secretaire/public/index.html
+++ b/frontend-secretaire/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Transport DanGE - Application de dispatch taxi pour secrétaire"
     />
+    <!-- Leaflet CSS pour la géolocalisation -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+      crossorigin=""/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Transport DanGE - Secrétaire</title>
